~ Repaired the Gap between the Exercise-Row and the Editor-Row by adding Wrapper-Classes to the HTML-Document and adding the Style from the Tab-Container to it

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,12 @@ header {
     display: none;
 }
 
+.task-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 /* Tab Container */
 
 /* Exercise Container */
